--- a/_data/osts.yml
+++ b/_data/osts.yml
@@ -323,6 +323,12 @@
   cover: https://i.scdn.co/image/ab67616d0000b273aad36b64a1a78951b504bc4e
   release_date: '2016-09-28'
   total_tracks: 31
+- id: 1mL4QfAwy3gFEjtGPHMG3F
+  title: 'Doom: The Dark Ages (Original Game Soundtrack)'
+  artist: Finishing Move Inc.
+  cover: https://i.scdn.co/image/ab67616d0000b2734f01ee10cef4a74c01766f49
+  release_date: '2025-05-14'
+  total_tracks: 35
 - id: 2gCFzRRO5acruR4y4QhIuI
   title: Elden Ring (Original Game Soundtrack)
   artist: Shoi Miyazawa
@@ -377,6 +383,12 @@
   cover: https://i.scdn.co/image/ab67616d0000b2735bd22c7af0868d3196b4c1c2
   release_date: '2017-04-21'
   total_tracks: 29
+- id: 61z0CTrR8zhxdyOoieyMJi
+  title: FINAL FANTASY IX Original Soundtrack
+  artist: SQUARE ENIX MUSIC
+  cover: https://i.scdn.co/image/ab67616d0000b27373fdbf8281a526452f942410
+  release_date: '2000'
+  total_tracks: 110
 - id: 2x9uZkJTGLxXHDm8rztQGK
   title: FINAL FANTASY VII Original Soundtrack
   artist: Nobuo Uematsu
@@ -401,6 +413,12 @@
   cover: https://i.scdn.co/image/ab67616d0000b2731456b85124487744ac5f4893
   release_date: '2020-12-23'
   total_tracks: 106
+- id: 4WWm1rNVQvvZoXwt495cQn
+  title: FINAL FANTASY VIII Original Soundtrack
+  artist: Nobuo Uematsu
+  cover: https://i.scdn.co/image/ab67616d0000b2734a8f99efdff178f3bdabde2a
+  release_date: '1999-03-01'
+  total_tracks: 73
 - id: 5rsJCTSppss2cccM8a9V0u
   title: FINAL FANTASY X Original Soundtrack
   artist: SQUARE ENIX MUSIC
@@ -497,6 +515,12 @@
   cover: https://i.scdn.co/image/ab67616d0000b2735980f4cac0be1d589272e1bf
   release_date: '2010'
   total_tracks: 24
+- id: 20kEyCFY0DQz9VwbhxkKgZ
+  title: 'Grand Theft Auto: San Andreas (Official Theme Song)'
+  artist: Michael Hunter
+  cover: https://i.scdn.co/image/ab67616d0000b273f8d9bdb33b7a4d6098a77446
+  release_date: '2004'
+  total_tracks: 1
 - id: 22gHuKaNSFyJE89MK9QxdA
   title: GRAVITY RUSH 2 Original Soundtrack
   artist: SIE Sound Team
@@ -587,6 +611,12 @@
   cover: https://i.scdn.co/image/ab67616d0000b273eb91f7eee08e9fdbfd6010c9
   release_date: '2016-02-24'
   total_tracks: 58
+- id: 1T3dB5mtp6IaQekRZ8Qu7Q
+  title: Helldivers 2 (Original Game Soundtrack)
+  artist: Wilbert Roget, II
+  cover: https://i.scdn.co/image/ab67616d0000b273c25bfa430ebbc81cdf6eba15
+  release_date: '2025-05-02'
+  total_tracks: 13
 - id: 5kK1FFsw7e1Gu7yOV6rDgH
   title: 'Hitman 2: Silent Assassin (Original Soundtrack)'
   artist: Jesper Kyd
@@ -629,6 +659,36 @@
   cover: https://i.scdn.co/image/ab67616d0000b27387331aac2268c9631cfeb0c9
   release_date: '2025-03-18'
   total_tracks: 36
+- id: 3e7IU11zNQe3GzMnGDeQOX
+  title: KINGDOM HEARTS - III, II.8, Unchained χ & Union χ [Cross] – (Original Soundtrack)
+  artist: Various Artists
+  cover: https://i.scdn.co/image/ab67616d0000b2736a5a249912d0d3573aaa264f
+  release_date: '2020-11-11'
+  total_tracks: 161
+- id: 59xa0duBH2doywRKohAqIY
+  title: KINGDOM HEARTS -HD 1.5 ReMIX- (Original Soundtrack)
+  artist: Various Artists
+  cover: https://i.scdn.co/image/ab67616d0000b2736cbaa82bbaac5d21752509f5
+  release_date: '2023-02-08'
+  total_tracks: 84
+- id: 6eVWdfj3yizOc8qtEmF00P
+  title: KINGDOM HEARTS -HD 2.5 ReMIX- (Original Soundtrack)
+  artist: Various Artists
+  cover: https://i.scdn.co/image/ab67616d0000b27360cb00c3a3c5cfd33632547f
+  release_date: '2023-02-08'
+  total_tracks: 103
+- id: 3gFT1ZUBt4wfek4hm0VsBV
+  title: KINGDOM HEARTS Birth by Sleep & 358/2 Days (Original Soundtrack)
+  artist: Various Artists
+  cover: https://i.scdn.co/image/ab67616d0000b2736b860bfa53fed7fb4b1aaea6
+  release_date: '2024-08-16'
+  total_tracks: 80
+- id: 6upYKLGSXNnI8W53QwBJoG
+  title: KINGDOM HEARTS Dream Drop Distance (Original Soundtrack)
+  artist: Various Artists
+  cover: https://i.scdn.co/image/ab67616d0000b273fb924da79a202a6772f65e5d
+  release_date: '2024-08-16'
+  total_tracks: 52
 - id: 2XproLyZtJ9DGfq5b1wQPe
   title: 'Klonoa 2: Lunatea''s Veil Music Collection'
   artist: 風のクロノアシリーズ サウンドチーム
@@ -828,6 +888,12 @@
   cover: https://i.scdn.co/image/ab67616d0000b27331aac7d4aaeb4c8dc23b2f0a
   release_date: '2009-01-28'
   total_tracks: 95
+- id: 7dsFpra92ogATVcROcJyZ1
+  title: Prey (Original Game Soundtrack)
+  artist: Various Artists
+  cover: https://i.scdn.co/image/ab67616d0000b273874abca41b40af49736fdd57
+  release_date: '2017-05-02'
+  total_tracks: 14
 - id: 63W4cQKfF2HTjgRYZcQ0tU
   title: Quake
   artist: Nine Inch Nails
@@ -852,6 +918,18 @@
   cover: https://i.scdn.co/image/ab67616d0000b2738effb3525dd4be986a60dc28
   release_date: '2016-09-01'
   total_tracks: 32
+- id: 10ZDr7VkJP1YyQaSgKa0pV
+  title: Risk of Rain
+  artist: Chris Christodoulou
+  cover: https://i.scdn.co/image/ab67616d0000b273ce231d49c4d7a32aee647ac7
+  release_date: '2013-11-15'
+  total_tracks: 17
+- id: 3eFWXLdogrCHW11f8ZQLoa
+  title: Risk of Rain 2
+  artist: Chris Christodoulou
+  cover: https://i.scdn.co/image/ab67616d0000b2736697f4b4355ca2590ad808be
+  release_date: '2020'
+  total_tracks: 20
 - id: 45QAjMGmD5shFTAx0YX6jH
   title: Save This World Phantasy Star Universe Original Score
   artist: SEGA SOUND TEAM
@@ -1128,6 +1206,24 @@
   cover: https://i.scdn.co/image/ab67616d0000b273e2f78a3a0251436e7f358426
   release_date: '2008-01-01'
   total_tracks: 16
+- id: 1TbLVY5HqL8DPlHtAVXlVj
+  title: The Music of Grand Theft Auto IV
+  artist: Various Artists
+  cover: https://i.scdn.co/image/ab67616d0000b27344faa79cb92834c802683f27
+  release_date: '2008-04-29'
+  total_tracks: 16
+- id: 31QCnHMnS7Cb4UdJkubgrr
+  title: 'The Music of Grand Theft Auto V, Vol. 1: Original Music'
+  artist: Various Artists
+  cover: https://i.scdn.co/image/ab67616d0000b273707fe4c159f0384c613dc4d2
+  release_date: '2013-09-24'
+  total_tracks: 18
+- id: 5EJAJsaHhQYLwVbynpcGkD
+  title: 'The Music of Grand Theft Auto V, Vol. 2: The Score'
+  artist: Various Artists
+  cover: https://i.scdn.co/image/ab67616d0000b273bdd081ed2b3594be6174df88
+  release_date: '2013-09-24'
+  total_tracks: 22
 - id: 19uGvOnAhqEQ7irwCEce99
   title: The Witcher (Original Game Soundtrack)
   artist: Pawel Blaszczak
@@ -1201,6 +1297,18 @@
   cover: https://i.scdn.co/image/ab67616d0000b27352c6b50c01025371a25105d0
   release_date: '2006-04-05'
   total_tracks: 79
+- id: 1ouaGVdfzIM4IDyH4YqRiZ
+  title: 'Wolfenstein II: The New Colossus (Original Game Soundtrack)'
+  artist: Various Artists
+  cover: https://i.scdn.co/image/ab67616d0000b27380255b6cc3fda7dc4ad84680
+  release_date: '2018-03-16'
+  total_tracks: 41
+- id: 6VNnTz7roRd6qVDQlBZWFr
+  title: 'Wolfenstein: The New Order Original Game Soundtrack'
+  artist: Mick Gordon
+  cover: https://i.scdn.co/image/ab67616d0000b273cb27e957fcf3d9622a5c8c8a
+  release_date: '2014-05-19'
+  total_tracks: 18
 - id: 0HMKppHnFphltdEzp3Sz7K
   title: 'YAKUZA 6: THE SONG OF LIFE ORIGINAL SOUNDTRACK'
   artist: SEGA SOUND TEAM
@@ -1243,6 +1351,12 @@
   cover: https://i.scdn.co/image/ab67616d0000b27363c1f8f7571671dd17a84bd5
   release_date: '1999-07-07'
   total_tracks: 36
+- id: 3aOnj1qetdRASuwvVqnAvA
+  title: フリーダムウォーズ オリジナルサウンドトラック
+  artist: SIE Sound Team
+  cover: https://i.scdn.co/image/ab67616d0000b2733e0182717b56adef227d8e2f
+  release_date: '2014-07-23'
+  total_tracks: 46
 - id: 78LGjDUuu5dQZRfbrFQ2Ys
   title: ペルソナ4 オリジナル・サウンドトラック
   artist: アトラスサウンドチーム
