Completed Moral Mazes

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -28,9 +28,9 @@
       link: https://global.oup.com/academic/product/moral-mazes-9780199729883
       date_added: 2022-11-14
       date_started: 2025-01-25
-      date_finished: null
-      recommended: false
-      progress: 50
+      date_finished: 2025-06-24
+      recommended: true
+      progress: 100
 
     - title: How to Take Smart Notes
       subtitle: One Simple Technique to Boost Writing, Learning and Thinking
