Update homepage introduction
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/_data/gags.yml
+++ b/_data/gags.yml
@@ -18,7 +18,7 @@
 - I don't have any good fuel fun facts. I don't even drive!
 - Did you know solo camping is a thing? I should try it sometime.
 - Budgeting is hard. You should try to save a little more for that rainy day!
-- I only ever see baths in hotels. What if they end up becoming extinct?!
+- I only ever tend to see baths in hotels. What if they end up becoming extinct?!
 - An internet connected sandwich maker wouldn't be so bad, would it?
 - Someone who is good at the economy please help me plan my startup runway
 - :wq!
